SET(runtime_jit_source
    JITListener.cpp
    JIT.cpp
    JITContext.cpp)

ADD_LIBRARY(runtime_jit ${runtime_jit_source})

GET_TARGET_PROPERTY(LLVM_INCLUDE_DIRECTORIES LLVM::JIT INTERFACE_INCLUDE_DIRECTORIES)
TARGET_INCLUDE_DIRECTORIES(runtime_jit SYSTEM PRIVATE ${LLVM_INCLUDE_DIRECTORIES})

MESSAGE(STATUS "LLVM_INCLUDE_DIRECTORIES:${LLVM_INCLUDE_DIRECTORIES}")

TARGET_LINK_LIBRARIES(runtime_jit
    core LLVM::JIT)